# game-theory

./: .gitignore  LICENSE  README.md
compleat-strategyst/: Game2xN.hs  Game2xN.lhs  Game2xNTests.hs  Game2xNTests.lhs  README.md  Setup.hs  TestDriver.hs  TestDriver.lhs  compleat-strategyst.cabal
