Name:           compleat-strategyst
Version:        0.1
Synopsis:       A pure functional game theoretic solver
Description:
  A library of functions to represent and solve formal games
  of size 2 x N, according to the algorithms described in the
  book "The Compleat Strategyst", by J.D.Williams.
License:        BSD3
Build-Type:     Simple
Author:         Bob Grudem
Maintainer:     bobgru@hotmail.com
Cabal-Version:  >= 1.8

Library
  Exposed-Modules: Game2xN
  Build-Depends:   base -any

Test-Suite test-game2xN
  Type:           exitcode-stdio-1.0
  Main-Is:        Game2xNTests.hs
  Buildable:      True
  Build-Depends:  base
                , QuickCheck
                , compleat-strategyst
  hs-source-dirs: .
  Other-Modules:  Game2xN
